fix overflow on phone when code block is used

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,4 +12,7 @@
          url('/rubik-vinyl-v1-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/rubik-vinyl-v1-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+pre {
+	max-width: 87vw;
+}
   
